crates/oopsie/tests/snapshots/report__report_basic_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error[report::TestError]: Test error: something failed

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 8 frames hidden ...
  1: report::TestOopsie<__T0>::build::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
  2: report::test_report_basic::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
  3: report::test_report_basic::{{closure}}::h[HASH]
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
  4: core::ops::function::FnOnce::call_once::h[HASH]
           at [STDLIB]/library/core/src/ops/function.rs:[LOC]
   ... 21 frames hidden ...
