crates/oopsie/tests/snapshots/report__report_basic_unstable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error[report::TestError]: Test error: something failed
  at crates/oopsie/tests/report.rs:[LOC]

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 8 frames hidden ...
  1: <report[[HASH]]::test_oopsies::Test<&str>>::build
           at tests/report.rs:[LOC]
  2: report[[HASH]]::test_report_basic
           at tests/report.rs:[LOC]
  3: report[[HASH]]::test_report_basic::{closure#0}
           at tests/report.rs:[LOC]
   ... 22 frames hidden ...
