crates/oopsie/tests/snapshots/report__report_chain_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error[report::OuterError]: Outer error
  at crates/oopsie/tests/report.rs:[LOC]
  ╰─▶ Test error: root cause

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ SPANTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... no spans captured ...

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 9 frames hidden ...
  1: report::test_report_chain::h[HASH]
           at tests/report.rs:[LOC]
  2: report::test_report_chain::{{closure}}::h[HASH]
           at tests/report.rs:[LOC]
   ... 22 frames hidden ...
