crates/oopsie/tests/snapshots/report__report_chain_unstable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: report
---
Error[report::OuterError]: Outer error
  at crates/oopsie/tests/report.rs:[LOC]
  ╰─▶ Test error: root cause

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 8 frames hidden ...
  1: <report[[HASH]]::test_oopsies::Test<&str>>::build
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
  2: report[[HASH]]::test_report_chain
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
  3: report[[HASH]]::test_report_chain::{closure#0}
           at [WORKSPACE]/crates/oopsie/tests/report.rs:[LOC]
   ... 22 frames hidden ...
