crates/oopsie/tests/snapshots/report__report_colored_stripped_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/report.rs
expression: strip_ansi(&rendered)
---
Error[report::TestError]: Test error: colored test
  at crates/oopsie/tests/report.rs:[LOC]

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ BACKTRACE ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
   ... 9 frames hidden ...
  1: report[[HASH]]::test_report_colored
           at tests/report.rs:[LOC]
  2: report[[HASH]]::test_report_colored::{closure#0}
           at tests/report.rs:[LOC]
   ... 22 frames hidden ...
